--- a/public/css/home/1196541.css
+++ b/public/css/home/1196541.css
@@ -13037,6 +13037,8 @@ screen and (min-width:769px) {
     position: relative;
     overflow: hidden;
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
     padding: 0;
     z-index: 1
 }
