--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,11 +1,5 @@
-.container .page_name {
-    position: relative;
-    width: 520px;
-    height: 45px;
-    margin: auto;
+.container .title {
     text-align: center;
-    line-height: 45px;
-    margin-bottom: 5px;
 }
 
 .container .page_name h2{
@@ -161,15 +155,13 @@
 }
 
 .container .bottom-box{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
     width: 650px;
     border-radius: 10px;
     border-color: #969696;
     padding: 10px;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     box-shadow: 4px 3px 8px 1px #b4c6d0;
 }
 
@@ -203,14 +195,49 @@
     margin-bottom: 5px;
 }
 
-.container .bottom-box .form-button #order-button{
-    width: 100%;
-    border-color: #d70018;
-    border-radius: 5px;
-    color: #d70018;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
+.order-card{
+    width: 600px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border-color: #969696;
+    box-shadow: 4px 3px 8px 1px #b4c6d0;
+    margin-bottom: 10px;
 }
+
+.order-card .title{
+    width: 100%;
+    text-align: center;
+    margin: 10px;
+}
+
+.order-card .form-label{
+    width:600px !important;
+}
+
+.order-card input[type=text]{
+    width: 100%;
+    padding: 6px 10px;
+    height: 30px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #c6e2ff;
+}
+
+.order-card button{
+    width: 80px;
+    height: 30px;
+    float: right;
+    border: 1px #d70018;
+    background-color: #d70018;
+    color: white;
+    font-weight: 600;
+    border-radius: 2px;
+}
+
+.order-card p{
+    text-align: right;
+}
+
