Show user's info in order form

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -215,7 +215,7 @@
     width:600px !important;
 }
 
-.order-card input[type=text]{
+.order-card input[type=text],input[type=email]{
     width: 100%;
     padding: 6px 10px;
     height: 30px;
